# zorba-exi-module

./: CMakeLists.txt
cmake_modules/Windows/: FindJNI.cmake
src/: CMakeLists.txt
src/com/zorba-xquery/www/modules/converters/: CMakeLists.txt  exi-header.xsd  exi-options.xsd  exi.xq
src/com/zorba-xquery/www/modules/converters/exi.xq.src/: JavaVMSingleton.cpp  JavaVMSingleton.h  exi.cpp
src/com/zorba-xquery/www/modules/converters/exi.xq.src/java/: .classpath  .project  test_main.java
src/com/zorba-xquery/www/modules/converters/exi.xq.src/java/com/zorbaxquery/exi/: MyFragmentContentHandler.java  exificient_options.java  exificient_stub.java
test_exi/ExpQueryResults/converters/exi/: serialize1.xml.res  serialize_parse1.xml.res  serialize_parse2.xml.res  serialize_parse3.xml.res  serialize_parse4.xml.res  serialize_parse5.xml.res  test-align-precompress-ser.xml.res  test-align-precompress.out  test-compression-ser.xml.res  test-compression.xml  test-fragment-ser.out  test-schemaid-ser.out  test-schemaid.xml  test-schemaid.xml.res  test-strict-ser.xml.res
test_exi/ExpQueryResults/converters/exi/movesinstitute.org/: movesinstitute_exi_test.xml.res
test_exi/Queries/converters/exi/: factbook-precomp.exi  factbook-schemaid-strict.exi  factbook-test-precomp-ser.xq  factbook-test-strict-ser.xq  serialize1.xq  serialize_parse1.xq  serialize_parse2.xq  serialize_parse3.spec  serialize_parse3.xq  serialize_parse4.xq  serialize_parse5.xq  test-align-precompress-ser.xq  test-align-precompress.xq  test-compression-ser.xq  test-compression.xq  test-fragment-ser.xq  test-fragment.xq  test-schemaid-ser.xq  test-schemaid.xq  test-strict-ser.xq  test-strict.xq  test.xml
test_exi/Queries/converters/exi/movesinstitute.org/: movesinstitute_exi_test.xq  test_schema_stream.xq
test_exi/Queries/converters/exi/movesinstitute.org/DAML/: cyc.xml_NOSCHEMA.exi  cyc.xml_NOSCHEMA_BYTEALIGN.exi  cyc.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  wines.daml_NOSCHEMA.exi  wines.daml_NOSCHEMA_BYTEALIGN.exi  wines.daml_NOSCHEMA_BYTEALIGN_HEADER.exi
test_exi/Queries/converters/exi/movesinstitute.org/DataStore/: weblog.xml_DEFAULT.exi  weblog.xml_DEFAULT_BYTEALIGNED.exi  weblog.xml_DEFAULT_BYTEALIGNED_HEADER.exi  weblog.xml_DEFAULT_HEADER.exi  weblog.xml_NOSCHEMA.exi  weblog.xml_NOSCHEMA_BYTEALIGN.exi  weblog.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  weblog.xml_PRECOMPRESSION.exi  weblog.xml_SCHEMA_LEXICAL.exi  weblog.xml_SCHEMA_LEXICAL_HEADER.exi  weblog.xml_STRICT.exi  weblog.xml_STRICT_BYTEALIGNED.exi  weblog.xml_STRICT_BYTEALIGNED_HEADER.exi  weblog.xml_STRICT_COMPRESSED.exi  weblog.xml_STRICT_COMPRESSED_HEADER.exi  weblog.xml_STRICT_HEADER.exi  weblog.xml_STRICT_PRECOMPRESSION_HEADER.exi
test_exi/Queries/converters/exi/movesinstitute.org/Google/: google00.xml_DEFAULT.exi  google00.xml_DEFAULT_BYTEALIGNED.exi  google00.xml_DEFAULT_BYTEALIGNED_HEADER.exi  google00.xml_DEFAULT_HEADER.exi  google00.xml_NOSCHEMA.exi  google00.xml_NOSCHEMA_BYTEALIGN.exi  google00.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  google00.xml_PRECOMPRESSION.exi  google00.xml_SCHEMA_LEXICAL.exi  google00.xml_SCHEMA_LEXICAL_HEADER.exi  google00.xml_STRICT.exi  google00.xml_STRICT_BYTEALIGNED.exi  google00.xml_STRICT_BYTEALIGNED_HEADER.exi  google00.xml_STRICT_COMPRESSED.exi  google00.xml_STRICT_COMPRESSED_HEADER.exi  google00.xml_STRICT_HEADER.exi  google00.xml_STRICT_PRECOMPRESSION_HEADER.exi  google01.xml_DEFAULT.exi  google01.xml_DEFAULT_BYTEALIGNED.exi  google01.xml_DEFAULT_BYTEALIGNED_HEADER.exi  google01.xml_DEFAULT_HEADER.exi  google01.xml_NOSCHEMA.exi  google01.xml_NOSCHEMA_BYTEALIGN.exi  google01.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  google01.xml_PRECOMPRESSION.exi  google01.xml_SCHEMA_LEXICAL_HEADER.exi  google01.xml_STRICT.exi  google01.xml_STRICT_BYTEALIGNED_HEADER.exi  google01.xml_STRICT_COMPRESSED.exi  google01.xml_STRICT_COMPRESSED_HEADER.exi  google01.xml_STRICT_HEADER.exi  google01.xml_STRICT_PRECOMPRESSION_HEADER.exi  google30.xml_DEFAULT.exi  google30.xml_DEFAULT_BYTEALIGNED.exi  google30.xml_DEFAULT_BYTEALIGNED_HEADER.exi  google30.xml_DEFAULT_HEADER.exi  google30.xml_NOSCHEMA.exi  google30.xml_NOSCHEMA_BYTEALIGN.exi  google30.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  google30.xml_PRECOMPRESSION.exi  (+9 more)
test_exi/Queries/converters/exi/movesinstitute.org/Miscellaneous/: factbook.xml_PRECOMPRESSION.exi  factbook.xml_STRICT.exi  factbook.xml_STRICT_BYTEALIGNED.exi
test_exi/Queries/converters/exi/movesinstitute.org/WSDL/: soap.xsd  wsdl1.xml_DEFAULT.exi  wsdl1.xml_DEFAULT_BYTEALIGNED.exi  wsdl1.xml_DEFAULT_BYTEALIGNED_HEADER.exi  wsdl1.xml_DEFAULT_HEADER.exi  wsdl1.xml_NOSCHEMA.exi  wsdl1.xml_NOSCHEMA_BYTEALIGN.exi  wsdl1.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  wsdl1.xml_PRECOMPRESSION.exi  wsdl1.xml_SCHEMA_LEXICAL.exi  wsdl1.xml_SCHEMA_LEXICAL_HEADER.exi  wsdl1.xml_STRICT.exi  wsdl1.xml_STRICT_BYTEALIGNED.exi  wsdl1.xml_STRICT_BYTEALIGNED_HEADER.exi  wsdl1.xml_STRICT_COMPRESSED.exi  wsdl1.xml_STRICT_COMPRESSED_HEADER.exi  wsdl1.xml_STRICT_HEADER.exi  wsdl1.xml_STRICT_PRECOMPRESSION_HEADER.exi  wsdl2.xml_DEFAULT.exi  wsdl2.xml_DEFAULT_BYTEALIGNED.exi  wsdl2.xml_DEFAULT_BYTEALIGNED_HEADER.exi  wsdl2.xml_DEFAULT_HEADER.exi  wsdl2.xml_NOSCHEMA.exi  wsdl2.xml_NOSCHEMA_BYTEALIGN.exi  wsdl2.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  wsdl2.xml_PRECOMPRESSION.exi  wsdl2.xml_SCHEMA_LEXICAL.exi  wsdl2.xml_SCHEMA_LEXICAL_HEADER.exi  wsdl2.xml_STRICT.exi  wsdl2.xml_STRICT_BYTEALIGNED.exi  wsdl2.xml_STRICT_BYTEALIGNED_HEADER.exi  wsdl2.xml_STRICT_COMPRESSED.exi  wsdl2.xml_STRICT_COMPRESSED_HEADER.exi  wsdl2.xml_STRICT_HEADER.exi  wsdl2.xml_STRICT_PRECOMPRESSION_HEADER.exi
test_exi/Queries/converters/exi/movesinstitute.org/notebook/: notebook.xml  notebook.xml_DEFAULT.exi  notebook.xml_DEFAULT_BYTEALIGNED.exi  notebook.xml_DEFAULT_BYTEALIGNED_HEADER.exi  notebook.xml_DEFAULT_HEADER.exi  notebook.xml_NOSCHEMA.exi  notebook.xml_NOSCHEMA_BYTEALIGN.exi  notebook.xml_NOSCHEMA_BYTEALIGN_HEADER.exi  notebook.xml_PRECOMPRESSION.exi  notebook.xml_SCHEMA_LEXICAL.exi  notebook.xml_SCHEMA_LEXICAL_HEADER.exi  (+7 more)
test_exi/Queries/converters/exi/sample-data/: notebook.xsd
(+6 files in other folders)
